# eclipse-calendar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check-lint-format.yml  test.yml
src/eclipse_calendar/: __main__.py  calendar.py  data.py  schemas.py  settings.py
tests/: test_eclipse_calendar.py
